force-app/main/default/objects/ShipmentItem__c/fields/External_Id__c.field-meta.xml
<CustomField>
        <fullName>External_Id__c</fullName>
        <description>SAP Unique Id of the Shipment Item</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>