force-app/main/default/objects/ShipmentItem__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Shipment Items</relationshipLabel>
        <relationshipName>Shipment_Items</relationshipName>
        <type>Lookup</type>
    </CustomField>