force-app/main/default/objects/ShipmentItem__c/fields/Shipment__c.field-meta.xml
<CustomField>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Items</relationshipLabel>
        <relationshipName>Shipment_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>