force-app/main/default/objects/ShipmentItem__c/fields/ShipmentId__c.field-meta.xml
<CustomField>
        <fullName>ShipmentId__c</fullName>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Shipment Id</label>
        <type>AutoNumber</type>
    </CustomField>