force-app/main/default/objects/ShipmentItem__c/fields/ShipmentQuantity__c.field-meta.xml
<CustomField>
        <fullName>ShipmentQuantity__c</fullName>
        <label>Shipment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>